[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-gen-agent"
version = "0.1.0"
description = "Generate FastAPI boilerplate from plain-English API descriptions using Claude."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["fastapi", "code-generation", "anthropic", "claude", "ai-agent"]
authors = [
    { name = "api-gen-agent contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
    # Runtime deps for generated code (useful for integration tests)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.scripts]
api-gen-agent = "api_gen_agent.cli:main"

[project.urls]
Homepage = "https://github.com/example/api-gen-agent"
Issues = "https://github.com/example/api-gen-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["api_gen_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
